[gd_scene load_steps=30 format=2]

[ext_resource path="res://Menu/Graphics/theme/defaultTheme.tres" type="Theme" id=1]
[ext_resource path="res://Menu/GameModeMenu/ModeMenu.gd" type="Script" id=2]
[ext_resource path="res://Menu/Graphics/Background/BackgroundBlack.png" type="Texture" id=3]
[ext_resource path="res://Menu/Graphics/Panel/panel.png" type="Texture" id=4]
[ext_resource path="res://Menu/Graphics/theme/font/FontDerelictRoughBig.tres" type="DynamicFont" id=5]
[ext_resource path="res://Menu/GameModeMenu/ModeButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://Menu/Graphics/Button/ButtonHover.png" type="Texture" id=7]
[ext_resource path="res://Menu/Graphics/theme/font/FontDerelictRegularBig.tres" type="DynamicFont" id=8]
[ext_resource path="res://Menu/Graphics/Button/ButtonPressedGreen.png" type="Texture" id=9]
[ext_resource path="res://Menu/Graphics/Button/ButtonNormalGreen.png" type="Texture" id=10]
[ext_resource path="res://Menu/Graphics/Button/ButtonPressedRed.png" type="Texture" id=11]
[ext_resource path="res://Menu/Graphics/Button/ButtonNormalRed.png" type="Texture" id=12]
[ext_resource path="res://Menu/Graphics/theme/MasterTheme.tres" type="Theme" id=13]
[ext_resource path="res://Audio/Menu/ButtonMapSelect.wav" type="AudioStream" id=14]

[sub_resource type="StyleBoxTexture" id=1]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 340, 80 )
margin_left = 20.0
margin_right = 87.0
margin_top = 20.0
margin_bottom = 20.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true

[sub_resource type="StyleBoxTexture" id=2]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 340, 80 )
margin_left = 20.0
margin_right = 87.0
margin_top = 20.0
margin_bottom = 20.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true
_sections_unfolded = [ "Margin" ]

[sub_resource type="StyleBoxTexture" id=3]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 340, 80 )
margin_left = 20.0
margin_right = 87.0
margin_top = 20.0
margin_bottom = 20.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true

[sub_resource type="StyleBoxTexture" id=4]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 340, 80 )
margin_left = 20.0
margin_right = 87.0
margin_top = 20.0
margin_bottom = 20.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true
_sections_unfolded = [ "Margin" ]

[sub_resource type="StyleBoxTexture" id=5]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 340, 80 )
margin_left = 20.0
margin_right = 87.0
margin_top = 20.0
margin_bottom = 20.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true
_sections_unfolded = [ "Margin" ]

[sub_resource type="StyleBoxTexture" id=6]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 340, 80 )
margin_left = 20.0
margin_right = 87.0
margin_top = 20.0
margin_bottom = 20.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true

[sub_resource type="StyleBoxTexture" id=7]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 340, 80 )
margin_left = 20.0
margin_right = 87.0
margin_top = 20.0
margin_bottom = 20.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true
_sections_unfolded = [ "Margin" ]

[sub_resource type="StyleBoxTexture" id=8]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 340, 80 )
margin_left = 20.0
margin_right = 87.0
margin_top = 20.0
margin_bottom = 20.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true

[sub_resource type="StyleBoxTexture" id=9]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
texture = ExtResource( 11 )
region_rect = Rect2( 0, 0, 340, 80 )
margin_left = 20.0
margin_right = 87.0
margin_top = 20.0
margin_bottom = 20.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true
_sections_unfolded = [ "Margin" ]

[sub_resource type="StyleBoxTexture" id=10]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 340, 80 )
margin_left = 20.0
margin_right = 87.0
margin_top = 20.0
margin_bottom = 20.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true

[sub_resource type="StyleBoxTexture" id=11]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
texture = ExtResource( 12 )
region_rect = Rect2( 0, 0, 340, 80 )
margin_left = 20.0
margin_right = 87.0
margin_top = 20.0
margin_bottom = 20.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true
_sections_unfolded = [ "Margin" ]

[sub_resource type="StyleBoxTexture" id=12]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
texture = ExtResource( 11 )
region_rect = Rect2( 0, 0, 340, 80 )
margin_left = 20.0
margin_right = 87.0
margin_top = 20.0
margin_bottom = 20.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true
_sections_unfolded = [ "Margin" ]

[sub_resource type="StyleBoxTexture" id=13]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
texture = ExtResource( 12 )
region_rect = Rect2( 0, 0, 340, 80 )
margin_left = 20.0
margin_right = 87.0
margin_top = 20.0
margin_bottom = 20.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true
_sections_unfolded = [ "Margin" ]

[sub_resource type="StyleBoxTexture" id=14]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
texture = ExtResource( 11 )
region_rect = Rect2( 0, 0, 340, 80 )
margin_left = 20.0
margin_right = 87.0
margin_top = 20.0
margin_bottom = 20.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true
_sections_unfolded = [ "Margin" ]

[sub_resource type="StyleBoxTexture" id=15]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
texture = ExtResource( 12 )
region_rect = Rect2( 0, 0, 340, 80 )
margin_left = 20.0
margin_right = 87.0
margin_top = 20.0
margin_bottom = 20.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true
_sections_unfolded = [ "Margin" ]

[node name="ModeMenu" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 1 )
script = ExtResource( 2 )
_sections_unfolded = [ "Focus", "Patch Margin", "Visibility" ]
onCloseFocus = null

[node name="BackgroundBlur" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
expand = true
stretch_mode = 0

[node name="Panel" type="NinePatchRect" parent="." index="1"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -449.5
margin_top = -418.0
margin_right = 449.5
margin_bottom = 418.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 1 )
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 539, 327 )
patch_margin_left = 62
patch_margin_top = 67
patch_margin_right = 164
patch_margin_bottom = 132

[node name="VBoxContainer" type="VBoxContainer" parent="Panel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 30
alignment = 1
_sections_unfolded = [ "Margin", "Theme", "custom_constants" ]

[node name="Header" type="Label" parent="Panel/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 54.0
margin_right = 899.0
margin_bottom = 154.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 5 )
text = "Game Mode"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="RegularButton" parent="Panel/VBoxContainer" index="1" instance=ExtResource( 6 )]

margin_left = 287.0
margin_top = 184.0
margin_right = 611.0
margin_bottom = 274.0
focus_neighbour_left = NodePath("../Modes/LeftSide/BouncyModeBtn")
focus_neighbour_top = NodePath("../Back")
focus_neighbour_right = NodePath("../Modes/RightSide/OneShotModeBtn")
focus_neighbour_bottom = NodePath("../Modes/LeftSide/BouncyModeBtn")
custom_styles/disabled = SubResource( 1 )
text = "Regular"
align = 0
_sections_unfolded = [ "Focus", "Rect", "Size Flags", "Textures", "Theme", "custom_styles" ]
modePath = "res://GameModes/Modes/Default.txt"
modeDescription = "Just the normal Game... And its actually pronounced \"Reuglar\""

[node name="SubHeader" type="HBoxContainer" parent="Panel/VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 304.0
margin_right = 899.0
margin_bottom = 354.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource( 1 )
alignment = 0
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="Perks" type="Label" parent="Panel/VBoxContainer/SubHeader" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 447.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 8 )
text = "Perks"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Challenges" type="Label" parent="Panel/VBoxContainer/SubHeader" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 451.0
margin_right = 899.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 8 )
text = "Challenges"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Modes" type="HBoxContainer" parent="Panel/VBoxContainer" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 384.0
margin_right = 899.0
margin_bottom = 662.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Size Flags" ]

[node name="LeftSide" type="VBoxContainer" parent="Panel/VBoxContainer/Modes" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 447.0
margin_bottom = 278.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
alignment = 1
_sections_unfolded = [ "Margin", "Rect", "Size Flags" ]

[node name="BouncyModeBtn" parent="Panel/VBoxContainer/Modes/LeftSide" index="0" instance=ExtResource( 6 )]

editor/display_folded = true
margin_left = 61.0
margin_right = 385.0
margin_bottom = 90.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../../../RegularButton")
focus_neighbour_right = NodePath("../../RightSide/OneShotModeBtn")
focus_neighbour_bottom = NodePath("../PermaOCModeBtn")
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Bounce it!"
align = 0
_sections_unfolded = [ "Focus", "Mouse", "Textures", "Theme", "Visibility", "custom_styles" ]
modePath = "res://GameModes/Modes/Bouncy.txt"
modeDescription = "Unleash a horde of never ending bullets bouncing through the wasteland."

[node name="PermaOCModeBtn" parent="Panel/VBoxContainer/Modes/LeftSide" index="1" instance=ExtResource( 6 )]

editor/display_folded = true
margin_left = 61.0
margin_top = 94.0
margin_right = 385.0
margin_bottom = 184.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../BouncyModeBtn")
focus_neighbour_right = NodePath("../../RightSide/360NoScopeModeBtn")
focus_neighbour_bottom = NodePath("../PermaPickUpsModeBtn")
custom_styles/pressed = SubResource( 5 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 6 )
text = "Hyperclock"
align = 0
_sections_unfolded = [ "Textures", "Theme", "custom_styles" ]
modePath = "res://GameModes/Modes/PermaOC.txt"
modeDescription = "More Overclock in every aspect"

[node name="PermaPickUpsModeBtn" parent="Panel/VBoxContainer/Modes/LeftSide" index="2" instance=ExtResource( 6 )]

editor/display_folded = true
margin_left = 61.0
margin_top = 188.0
margin_right = 385.0
margin_bottom = 278.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../PermaOCModeBtn")
focus_neighbour_right = NodePath("../../RightSide/HardcoreModeBtn")
focus_neighbour_bottom = NodePath("../../../Back")
size_flags_vertical = 4
custom_styles/pressed = SubResource( 7 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 8 )
text = "PickUp Frenzy"
align = 0
_sections_unfolded = [ "Textures", "Theme", "custom_styles" ]
modePath = "res://GameModes/Modes/PermaPickUps.txt"
modeDescription = "Pick Ups forever!!! No seriously, they never stop!"

[node name="RightSide" type="VBoxContainer" parent="Panel/VBoxContainer/Modes" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 451.0
margin_right = 899.0
margin_bottom = 278.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
alignment = 1
_sections_unfolded = [ "Margin", "Rect", "Size Flags" ]

[node name="OneShotModeBtn" parent="Panel/VBoxContainer/Modes/RightSide" index="0" instance=ExtResource( 6 )]

editor/display_folded = true
margin_left = 62.0
margin_right = 386.0
margin_bottom = 90.0
focus_neighbour_left = NodePath("../../LeftSide/BouncyModeBtn")
focus_neighbour_top = NodePath("../../../RegularButton")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../360NoScopeModeBtn")
custom_styles/pressed = SubResource( 9 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
text = "One Shot"
align = 0
_sections_unfolded = [ "Textures", "Theme", "custom_styles" ]
modePath = "res://GameModes/Modes/OneShot.txt"
modeDescription = "Think you are fast? Well prove it! The first hit kills you."

[node name="360NoScopeModeBtn" parent="Panel/VBoxContainer/Modes/RightSide" index="1" instance=ExtResource( 6 )]

editor/display_folded = true
margin_left = 62.0
margin_top = 94.0
margin_right = 386.0
margin_bottom = 184.0
focus_neighbour_left = NodePath("../../LeftSide/PermaOCModeBtn")
focus_neighbour_top = NodePath("../OneShotModeBtn")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../HardcoreModeBtn")
size_flags_vertical = 4
custom_styles/pressed = SubResource( 12 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 13 )
text = "360 No Scope"
align = 0
_sections_unfolded = [ "Rect", "Textures", "Theme", "custom_styles" ]
modePath = "res://GameModes/Modes/360NoScope.txt"
modeDescription = "ERROR: Targeting system not found"

[node name="HardcoreModeBtn" parent="Panel/VBoxContainer/Modes/RightSide" index="2" instance=ExtResource( 6 )]

editor/display_folded = true
margin_left = 62.0
margin_top = 188.0
margin_right = 386.0
margin_bottom = 278.0
focus_neighbour_left = NodePath("../../LeftSide/PermaPickUpsModeBtn")
focus_neighbour_top = NodePath("../360NoScopeModeBtn")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../../../Back")
size_flags_vertical = 4
custom_styles/pressed = SubResource( 14 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 15 )
text = "Hardcore"
align = 0
_sections_unfolded = [ "Focus", "Rect", "Size Flags", "Textures", "Theme", "Visibility", "custom_styles" ]
modePath = "res://GameModes/Modes/Hardcore.txt"
modeDescription = "You want to have more of everything? Here you go!"

[node name="Back" type="Button" parent="Panel/VBoxContainer" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 287.0
margin_top = 692.0
margin_right = 611.0
margin_bottom = 782.0
rect_min_size = Vector2( 324, 90 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_neighbour_left = NodePath("../Modes/LeftSide/PermaPickUpsModeBtn")
focus_neighbour_top = NodePath("../Modes/RightSide/HardcoreModeBtn")
focus_neighbour_right = NodePath("../Modes/RightSide/HardcoreModeBtn")
focus_neighbour_bottom = NodePath("../RegularButton")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 4
size_flags_vertical = 1
theme = ExtResource( 13 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Back"
flat = false
align = 0
_sections_unfolded = [ "Focus", "Rect", "Size Flags", "Textures", "Theme" ]

[node name="ModeSelectedAudio" type="AudioStreamPlayer" parent="." index="2"]

stream = ExtResource( 14 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "VFX"

[connection signal="pressed" from="Panel/VBoxContainer/Back" to="." method="openClose"]


